<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/gradient_pg_1"
  tools:context=".FoodFive">
  
  <TextView
      android:id="@+id/product_label_five"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:padding="10dip"
      android:text="@string/meal_six"
      android:textColor="@color/white"
      android:textSize="25sp"
      android:textStyle="bold" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="340dp"
      android:layout_height="220dp"
      android:layout_below="@+id/product_label_five"
      android:layout_centerHorizontal="true"
      android:adjustViewBounds="true"
      android:contentDescription="@string/meal_six"
      android:scaleType="fitXY"
      android:src="@drawable/food_6" />

  <TextView
      android:id="@+id/product_description1"
      android:layout_width="265dp"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/imageView2"
      android:layout_alignRight="@+id/imageView2"
      android:layout_below="@+id/imageView2"
      android:layout_marginTop="17dp"
      android:gravity="left|center_horizontal|center"
      android:height="150dp"
      android:maxWidth="250dp"
      android:minWidth="150dp"
      android:padding="10dip"
      android:scrollHorizontally="false"
      android:text="@string/ingreidients_six"
      android:textColor="@color/white"
      android:textSize="17sp"
      android:textStyle="bold"
      android:width="250dp" />

  <Button
      android:id="@+id/button5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignRight="@+id/product_description1"
      android:layout_marginBottom="11dp"
      android:layout_marginRight="14dp"
      android:text="@string/next_a"
      android:onClick="btnGetMap"
      android:textColor="@color/white" />

  <Button
      android:id="@+id/justcook5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/product_description1"
      android:layout_alignTop="@+id/button5"
      android:layout_marginLeft="18dp"
      android:onClick="jstCk5"
      android:text="@string/next_b"
      android:textColor="@color/white" />
  
</RelativeLayout>